<resources>
    <string name="app_name">My Bio</string>
    <string name="my_profile_picture">My Profile Picture</string>
    <string name="my_name">Stan Lee</string>
    <string name="my_number">+234 (0) 123 456 7890</string>
    <string name="my_phone">My Phone</string>
    <string name="my_email">My Email</string>
    <string name="my_email_address">codehunta@mycompany.com</string>
    <string name="my_home_address">3 Abike Close off Miyaki str., Oworonshoki, Lagos</string>
    <string name="my_brief_bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales neque sodales ut etiam sit amet nisl purus in. Tincidunt lobortis feugiat vivamus at augue. Metus aliquam eleifend mi in nulla posuere sollicitudin. Amet facilisis magna etiam tempor orci eu lobortis elementum nibh. A diam maecenas sed enim ut sem viverra aliquet. Odio ut enim blandit volutpat maecenas volutpat. Ut diam quam nulla porttitor. Ultricies mi eget mauris pharetra et ultrices neque. Tristique magna sit amet purus gravida quis blandit turpis. Viverra nam libero justo laoreet. Turpis massa sed elementum tempus egestas sed sed.

        Ullamcorper dignissim cras tincidunt lobortis feugiat. Vestibulum sed arcu non odio euismod lacinia at. Aliquet lectus proin nibh nisl. Imperdiet dui accumsan sit amet. Nunc mattis enim ut tellus elementum sagittis vitae. Euismod in pellentesque massa placerat. Ullamcorper velit sed ullamcorper morbi tincidunt. Adipiscing at in tellus integer feugiat. Risus in hendrerit gravida rutrum quisque non. Eget aliquet nibh praesent tristique magna sit amet purus. Euismod elementum nisi quis eleifend. Tortor posuere ac ut consequat semper. Egestas fringilla phasellus faucibus scelerisque eleifend donec. Risus nec feugiat in fermentum posuere urna. Massa massa ultricies mi quis hendrerit dolor magna eget est. Eleifend mi in nulla posuere.

        Quis vel eros donec ac odio tempor orci dapibus ultrices. Enim eu turpis egestas pretium aenean pharetra magna. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. Id diam maecenas ultricies mi. Vitae congue eu consequat ac felis donec et odio pellentesque. Tempor id eu nisl nunc mi ipsum faucibus. Nec ullamcorper sit amet risus nullam eget felis eget. Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Et odio pellentesque diam volutpat commodo sed egestas egestas fringilla. Malesuada nunc vel risus commodo viverra maecenas accumsan lacus vel. In hac habitasse platea dictumst vestibulum rhoncus.</string>
    <string name="bio">Bio:</string>
    <string name="my_location">My Location</string>
    <string name="happy_face">Happy Face</string>
</resources>
