<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/img_my_face"
        android:layout_width="132dp"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/myface"
        android:contentDescription="@string/happy_face" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="328dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold_italic"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_my_face"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_phone"
        android:layout_width="38dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/my_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        app:layout_constraintBottom_toBottomOf="@+id/btn_phone"
        app:srcCompat="@drawable/myphone" />

    <Button
        android:id="@+id/btn_phone"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#262D60"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/my_number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toEndOf="@+id/img_phone"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <ImageView
        android:id="@+id/img_email"
        android:layout_width="38dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/my_email"
        app:layout_constraintEnd_toEndOf="@+id/img_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_phone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_mail"
        app:srcCompat="@drawable/mymail" />

    <Button
        android:id="@+id/btn_mail"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/my_email_address"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="@+id/btn_phone"
        app:layout_constraintTop_toBottomOf="@+id/btn_phone" />

    <ImageView
        android:id="@+id/img_location"
        android:layout_width="38dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_email"
        app:layout_constraintBottom_toBottomOf="@+id/btn_location"
        app:srcCompat="@drawable/mylocation"
        android:contentDescription="@string/my_location" />

    <Button
        android:id="@+id/btn_location"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="#262D60"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/my_home_address"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="@+id/btn_mail"
        app:layout_constraintTop_toBottomOf="@+id/btn_mail" />

    <TextView
        android:id="@+id/text_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/bio"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="@+id/btn_location"
        app:layout_constraintTop_toBottomOf="@+id/btn_location" />

    <ScrollView
        android:id="@+id/scroll_bio"
        android:layout_width="293dp"
        android:layout_height="139dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintEnd_toEndOf="@+id/btn_location"
        app:layout_constraintStart_toStartOf="@+id/btn_location"
        app:layout_constraintTop_toBottomOf="@+id/text_bio">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/my_brief_bio"
            android:textAlignment="inherit" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>